compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__import_module_from_constructor.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1307
expression: "\npub fn main() {\n  let value = values.Value(10)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let value = values.Value(10)
              ▔▔▔▔▔▔↑         
}


----- AFTER ACTION
import values

pub fn main() {
  let value = values.Value(10)
}
