compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__import_module_from_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1265
expression: "\npub fn main() {\n  result.is_ok()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  result.is_ok()
  ▔▔▔▔▔▔↑       
}


----- AFTER ACTION
import result

pub fn main() {
  result.is_ok()
}
