compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__import_module_from_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1556
expression: "\npub fn main(res) {\n  case res {\n    result.Ok(_) -> Nil\n    result.Error(_) -> Nil\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main(res) {
  case res {
    result.Ok(_) -> Nil
    ▔▔▔▔▔▔↑            
    result.Error(_) -> Nil
  }
}


----- AFTER ACTION
import result

pub fn main(res) {
  case res {
    result.Ok(_) -> Nil
    result.Error(_) -> Nil
  }
}
