compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__import_module_from_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1292
expression: type Wobble = wibble.Wubble
---
----- BEFORE ACTION
type Wobble = wibble.Wubble
              ▔▔▔▔▔▔↑      


----- AFTER ACTION
import mod/wibble

type Wobble = wibble.Wubble
