compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__import_similar_module.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1340
expression: "\npub fn main() {\n  reult.is_ok()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  reult.is_ok()
  ▔▔▔▔▔↑       
}


----- AFTER ACTION
import result

pub fn main() {
  result.is_ok()
}
