compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__label_shorthand_action_works_on_labelled_call_args.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 836
expression: "\npub fn main() {\n    let arg1 = 1\n    let arg2 = 2\n    wibble(arg2: arg2, arg1: arg1)\n}\n\npub fn wibble(arg1 arg1, arg2 arg2) { Nil }\n"
---
----- BEFORE ACTION

pub fn main() {
    let arg1 = 1
    let arg2 = 2
    wibble(arg2: arg2, arg1: arg1)
     ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑          
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }


----- AFTER ACTION

pub fn main() {
    let arg1 = 1
    let arg2 = 2
    wibble(arg2: , arg1: )
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
