compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_basic_multiple.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2071
expression: "\nimport option\n\npub fn main() {\n  option.Some(1)\n  option.Some(1)\n  todo\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
  option.Some(1)
  todo
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
  Some(1)
  Some(1)
  todo
}
